# C-PATS

01-IntroduccionYCout&CIN/: 01-01-1Programa.cpp  01-02-DatosBasicosCpp.cpp  01-03 Lectura o entrada de datos.cpp
01-IntroduccionYCout&CIN/CLASES/: 01-01-1Programa.cpp
01-IntroduccionYCout&CIN/EJERCICIOS/: 01-01 LecturaTEclado.cpp
01-IntroduccionYCout&CIN/EJERCICIOS/02/: 01-02IVA.cpp
01-IntroduccionYCout&CIN/EJERCICIOS/02 - Expresiones/1/: 01-Exprexiones.cpp
01-IntroduccionYCout&CIN/EJERCICIOS/03/: 01-03 DatosPersona.cpp
IMPORTANTES/: CMakeLists.txt
