cmake_minimum_required(VERSION 3.26)
project(CppProgramacionATS)

set(CMAKE_CXX_STANDARD 17)

add_executable(CppProgramacionATS main.cpp
        "../01-IntroduccionYCout&CIN/CLASES/01-03 Lectura o entrada de datos.cpp"
        "../01-IntroduccionYCout&CIN/EJERCICIOS/01/01-01 LecturaTEclado.cpp"
        ../01-IntroduccionYCout&CIN/CLASES/01-02-DatosBasicosCpp.cpp
        ../01-IntroduccionYCout&CIN/EJERCICIOS/02/01-02IVA.cpp
        "../01-IntroduccionYCout&CIN/EJERCICIOS/01/01-01 LecturaTEclado.cpp"
        "../01-IntroduccionYCout&CIN/EJERCICIOS/03/01-03 DatosPersona.cpp"
        ../01-IntroduccionYCout&CIN/CLASES/01-01-1Programa.cpp
        "../01-IntroduccionYCout&CIN/EJERCICIOS/02 - Expresiones/1/01-Exprexiones.cpp")
